Fix download button box-sizing sizing overflow and add shared view drag-and-drop & UI redesign

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,10 +2,11 @@ body{
     background-color: $main;
 }
 
-* {
+*, *::before, *::after {
     font-family: 'Roboto';
     color: $secondary;
     margin: 0;
+    box-sizing: border-box;
 }
 
 p{
